<resources>
    <string name="app_name">Car Revisions</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_revisions">Revisions</string>
    <string name="title_activity_cars">Cars</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_apply">Apply</string>
    <string name="stat_awaiting">Awaiting</string>
    <string name="stat_ongoing">Ongoing</string>
    <string name="stat_finished">Finished</string>
    <string name="stat_canceled">Canceled</string>
    <string name="canton">Canton</string>
    <string name="plate">Plate</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="mileage">Mileage</string>
    <string name="year">Year</string>
    <string name="date_start">Start date</string>
    <string name="date_end">End date</string>
    <string name="status">Status</string>
    <string name="technician">Technician</string>
    <string name="action_add">Add</string>
    <string name="revision_update_success">Revision successfully updated</string>
    <string name="car_update_success">Car successfully updated</string>
    <string name="revision_update_fail">Failed to update the revision</string>
    <string name="car_update_fail">Failed to update the car</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="unsaved_changes_msg">There are some unsaved changes. What would you like to do?</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="title_new_revision">New Revision</string>
    <string name="title_new_car">New Car</string>
    <string name="title_details_revision">Revision Details</string>
    <string name="title_details_car">Car Details</string>
    <string name="verify_plate">Verify plate</string>
    <string name="app_icon_desc">Application icon</string>
    <string name="no_matching_item">No matching item found</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete_msg">This item will be deleted permanently. Proceed with deletion?</string>
    <string name="revision_delete_success">Revision successfully deleted</string>
    <string name="revision_delete_fail">Failed to delete the revision</string>
    <string name="revision_create_success">Revision created successfully</string>
    <string name="revision_create_fail">Failed to create the revision</string>
    <string name="date_start_invalid">Start date input invalid</string>
    <string name="date_end_invalid">End date input invalid</string>
    <string name="use_format">Please use format \"%s\"</string>
    <string name="revision_car_not_existing">New car detected, switching to car creation…</string>
    <string name="pref_header_about">About</string>
    <string name="pref_about_text">This application has been made for the module 644–1 \"Mobile development and cloud\" by Arthur Avez and Zacharie Renna.</string>
    <string name="language">Language</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="err_password_empty">Password can\'t be empty</string>
    <string name="err_email_empty">Email can\'t be empty</string>
    <string name="err_firstname_empty">Firstname can\'t be empty</string>
    <string name="err_lastname_empty">Lastname can\'t be empty</string>
    <string name="err_email_invalid">Invalid email address</string>
    <string name="err_password_incorrect">Incorrect password</string>
    <string name="err_creds_unknown">No account linked to this email</string>
    <string name="err_email_inuse">Email already in use</string>
    <string name="err_password_mismatch">Passwords not matching</string>
    <string name="welcome_msg">Welcome, %s</string>
    <string name="welcome_back_msg">Welcome back, %s</string>
    <string name="repeat_password">Repeat password</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="logout">Logout</string>
    <string name="car_create_success">Car created successfully</string>
    <string name="car_create_fail">Failed to create the car</string>
    <string name="err_plate_empty">Plate can\'t be empty</string>
    <string name="err_mileage_empty">Mileage can\'t be empty</string>
    <string name="car_delete_success">Car successfully deleted</string>
    <string name="car_delete_fail">Failed to delete the car, please make sure no revision is linked to this car and try again</string>
    <string name="logout_msg">See you soon!</string>
    <string name="remember_me">Remember me</string>
    <string name="desc_icon_login">Login icon</string>
    <string name="desc_icon_revision">Revision icon</string>
    <string name="desc_icon_register">Register icon</string>
    <string name="title">Title</string>
    <string name="desc_icon_car">Car icon</string>
    <string name="action_back">Back</string>
    <string name="action_new">New...</string>
    <string name="min_pwd_msg">The password must be at least 6 characters long!</string>
</resources>